# alfred-adobe-illustrator

./: CHANGELOG.md  README.md  pyproject.toml
src/: commands.json  info.plist  main.py  recent_files.py  update_commands.py  user_actions.py
src/js/: recentFiles.jsx  userActions.jsx
